finish all text, adjusted all logos

--- a/main.tex
+++ b/main.tex
@@ -114,8 +114,7 @@
                       %% ---------------- R&D ---------------- %%
 \sectionline{Key R\&D Contributions}
 
-                         % ------ Doppler Ambiguity Head ------ %
-                         
+                         % ------ Doppler Ambiguity Head ------ %    
 \begin{tabular}{@{}m{0.5cm}@{\hspace{0.5em}}m{2.2cm}@{\hspace{0.5em}}m{15cm}@{}}
   \raisebox{1.3em}{\includegraphics[width=0.9cm]{images/scantinel_logo.png}} & 
   \raisebox{1.8em}{\begin{minipage}[t]{\linewidth}
@@ -131,19 +130,14 @@
   \end{minipage}}
 \end{tabular}
 
-                         % ------ Doppler Ambiguity Body ------ %
-                         
+                         % ------ Doppler Ambiguity Body ------ %          
 \vspace{-1em}
 \begin{itemize}[leftmargin=*]
   \item Responsible of R\&D, implementation, testing and enhancing of a novel algorithm for Doppler ambiguity in FMCW LiDAR systems.
   \\ {\fontsize{10pt}{10pt}\selectfont\textcolor{blocktext2_color}{{\fontsize{10pt}{10pt}\selectfont\textcolor{blocktext2_color}{\href{https://amr-aboughazala.super.site/doppler-ambiguity-solution}{Sources}}}: VQRV, VTRV, VQR}}
-  
-
 \end{itemize}
 
-
-                            % ------ Perception Head ------ %
-                         
+                            % ------ Perception Head ------ %   
 \vspace{1em}                       
 \begin{tabular}{@{}m{0.5cm}@{\hspace{0.5em}}m{2.2cm}@{\hspace{0.5em}}m{15cm}@{}}
   \raisebox{1.3em}{\includegraphics[width=0.9cm]{images/scantinel_logo.png}} & 
@@ -328,14 +322,15 @@ C\# & \circles{3}{6}
 \end{minipage}%
 }
 
+
                       %% ---------------- Industry Experience ---------------- %%
                       
 \newpage
 \sectionline{Industry Experience}                    
-                                    % ------ Scantinel Head ------ %                          
-\begin{tabular}{@{}m{0.5cm}@{\hspace{0.5em}}m{2.2cm}@{\hspace{0.5em}}m{15cm}@{}}
-  \raisebox{-0.5em}{\includegraphics[width=0.9cm]{images/scantinel_logo.png}} & 
-  \raisebox{0.3em}{\begin{minipage}[t]{\linewidth}
+                                    % ------ Scantinel Head ------ %                         
+{\hspace{1.5em}}\begin{tabular}{@{}m{0.5cm}@{\hspace{0.5em}}m{2.2cm}@{\hspace{0.5em}}m{15cm}@{}}
+  \raisebox{1.3em}{\includegraphics[width=0.9cm]{images/scantinel_logo.png}} & 
+  \raisebox{1.8em}{\begin{minipage}[t]{\linewidth}
   \centering
     \textcolor{blocktitle1_color}{Sep. 21}\\
     \textcolor{blocktitle1_color}{Present}
@@ -349,16 +344,13 @@ C\# & \circles{3}{6}
 \end{tabular}                                  
 
                                   % ------ Scantinel Block ------ %
-\vspace{0.4em}
+\vspace{-1em}
 \begin{itemize}[leftmargin=*]
   \item Led the architecture of new system software, collaborating with embedded teams to align hardware/software interfaces. 
   \\ {\fontsize{10pt}{10pt}\selectfont\textcolor{blocktext2_color}{Skills: Pattern design MVC/MVVM }}    
-
   \item  Developed and maintained real-time and offline visualization GUIs supporting continuous feature development and release cycles for internal users and customers over two years. 
   \\ {\fontsize{10pt}{10pt}\selectfont\textcolor{blocktext2_color}{Skills: python, PyQt}}     
-  
   \item Developed a user-facing GUI integrating multiple signal processing algorithms and visualization tools, enabling interactive analysis and testing across devices with real-time performance evaluation.
-  
   \item implementing testing development creating unit, integration and functional testing. 
   \\ {\fontsize{10pt}{10pt}\selectfont\textcolor{blocktext2_color}{Skills: pytest}}  
 \end{itemize}                
@@ -386,33 +378,7 @@ C\# & \circles{3}{6}
   \item Developed a GUI applying image processing algorithm on Microscopic Images to count bacteria.
   \item Implemented several user interface applications. 
   \\ {\fontsize{10pt}{10pt}\selectfont\textcolor{blocktext2_color}{Skills: JavaFX, .Net Framework WPF and Delphi.}}  
-\end{itemize} 
-
-
-                             % ------ OBDient Head ------ %               
-\vspace{0.5em}
-\begin{tabular}{@{}m{0.5cm}@{\hspace{0.5em}}m{2.2cm}@{\hspace{0.5em}}m{15cm}@{}}
-  \raisebox{1.3em}{\includegraphics[width=0.9cm]{images/ilmenau1_logo.png}} & 
-  \raisebox{1.8em}{\begin{minipage}[t]{\linewidth}
-  \centering
-    \textcolor{blocktitle1_color}{Jul. 18}\\
-    \textcolor{blocktitle1_color}{Nov. 18}
-  \end{minipage} 
-  } &
-  \raisebox{0.5em}{\begin{minipage}[t]{\linewidth}
-    \raggedright
-    {\fontsize{11pt}{9pt}\selectfont\textbf{\textcolor{blocktitle1_color}{\text{Founding Engineer,}}}}
-    {\fontsize{9pt}{9pt}\selectfont\textcolor{blocktitle2_color}{Start Up OBDient, TU Ilmenau}}
-  \end{minipage}}
-\end{tabular}                             
-
-                               % ------ OBDient Block ------ %             
-\vspace{-1em}
-\begin{itemize}[leftmargin=*]
-  \item  Implemented data sensor fusion using GPS and Accelerometer on Raspberry Pi.  
-  \\ {\fontsize{10pt}{10pt}\selectfont\textcolor{blocktext2_color}{Tools: NMEA Data of a NEO-6M GPS, MPU6050 GyroSensor, Raspberry Pi 3 B+}}
-  \item Implemented Kalman Filter GPS reception using a motion model of vehicles and pedestrians.
-\end{itemize}                               
+\end{itemize}  
 
                              % ------ Siemens Head ------ %
 \vspace{1.3em}
@@ -463,19 +429,57 @@ C\# & \circles{3}{6}
   \item Shift Leader for a group of 5 to 10 daily, managing the workflow through the team. 
 \end{itemize}
 
-% Education
-\sectionline{Education}
-\textbf{M.Sc. in Communications and Signal Processing}\\
-Technische Universität Ilmenau, Germany\\
-\textit{Sep 2014 -- Feb 2018}\\
-Major: Mobile Communications, Adaptive Arrays, DSP\\
-Grade: 2.2/1.0
+                                   % ------ Education ------ %
+\sectionline{Education}                                 
+                                % ------ Master Head ------ %                         
+{\hspace{1.5em}}\begin{tabular}{@{}m{0.5cm}@{\hspace{0.5em}}m{2.2cm}@{\hspace{0.5em}}m{15cm}@{}}
+  \raisebox{1.3em}{\includegraphics[width=0.9cm]{images/scantinel_logo.png}} & 
+  \raisebox{1.8em}{\begin{minipage}[t]{\linewidth}
+  \centering
+    \textcolor{blocktitle1_color}{Sep. 14}\\
+    \textcolor{blocktitle1_color}{Feb. 18}
+  \end{minipage} 
+  } &
+  \raisebox{0.5em}{\begin{minipage}[t]{\linewidth}
+    \raggedright
+    {\fontsize{11pt}{9pt}\selectfont\textbf{\textcolor{blocktitle1_color}{\text{M.Sc. in Communications and Signal Processing,}}}}
+    {\fontsize{9pt}{9pt}\selectfont\textcolor{blocktitle2_color}{Technische Universität Ilmenau, Germany}}
+  \end{minipage}}
+\end{tabular}   
 
-\vspace{0.6em}
-\textbf{B.Sc. in Electronics and Communication}\\
-Arab Academy for Science and Technology, Alexandria\\
-\textit{Sep 2007 -- Feb 2010}\\
-Grade: 1.3/1.0 — Top of class
+                                  % ------ Master Block ------ %
+\vspace{-1em}
+\begin{itemize}[leftmargin=*]
+  \item Major Subjects: Mobile Communications Engineering, Adaptive Array and Signal Processing, Digital Signal Processing (audio and Image) and Communication Networks.
+  \item Average grade: 2.2/1.0
+\end{itemize}                          
+
+                                         
+                                 
+                                         % ------ Bachelor Head ------ %  
+\vspace{0.4em}                       
+\begin{tabular}{@{}m{0.5cm}@{\hspace{0.5em}}m{2.2cm}@{\hspace{0.5em}}m{15cm}@{}}
+  \raisebox{1.3em}{\includegraphics[width=1cm]{images/astmt5_logo.png}} & 
+  \raisebox{1.8em}{\begin{minipage}[t]{\linewidth}
+  \centering
+    \textcolor{blocktitle1_color}{Sep. 05}\\
+    \textcolor{blocktitle1_color}{Feb. 10}
+  \end{minipage}
+  } &
+  \raisebox{0.5em}{\begin{minipage}[t]{\linewidth}
+    \raggedright
+    {\fontsize{11pt}{9pt}\selectfont\textbf{\textcolor{blocktitle1_color}{\text{B.Sc. in Electronics and Communication,}}}}
+    {\fontsize{9pt}{9pt}\selectfont\textcolor{blocktitle2_color}{Arab Academy for Science and Technology, Alexandria}}
+  \end{minipage}}
+\end{tabular}             
+
+                                  % ------ Bachelor Block ------ %
+\vspace{-1em}
+\begin{itemize}[leftmargin=*]
+  \item Major Subjects: Wireless and Mobile Communications, Analog and Digital Signal Processing, Communication Networks, Electromagnetic and Antenna theories.
+  \item Average grade: 1.3/1.0 – Excellent with degree of honor besides graduating top of my class.
+\end{itemize}   
+
 
 % Courses
 \sectionline{Certificates and Online Courses}
@@ -487,10 +491,10 @@ Grade: 1.3/1.0 — Top of class
   \item 04 Jun. 2021: \href{https://coursera.org/share/e0bd7b6ea301e1108dfe609c783f2706}{Convolutional Neural Networks — Coursera}
   \item 07 May 2021: \href{https://coursera.org/share/ef6671ff524b9d2e5c1e0e282d457f56}{Improving DNN Hyperparameter Tuning, Regularization and Optimization — Coursera}
   \item 24 Aug. 2021: \href{http://www.udacity.com/certificate/e/95ce8498-c21f-11eb-aa1a-5f098308d726}{Sensor Fusion — Udacity (Mercedes Benz)}
-\end{itemize}
+\end{itemize}          
 
 
-\vspace{2em}
+
 \sectionline{Personal Skills}
 
 \begin{center}
@@ -500,6 +504,7 @@ Grade: 1.3/1.0 — Top of class
   {\fontsize{10pt}{10pt}\selectfont Arabic:} {\fontsize{10pt}{10pt}\selectfont\textcolor{dimmed}{Native}} \\
 {\fontsize{10pt}{10pt}\selectfont English:} {\fontsize{10pt}{10pt}\selectfont\textcolor{dimmed}{Fluent}} \\
 {\fontsize{10pt}{10pt}\selectfont German:} {\fontsize{10pt}{10pt}\selectfont\textcolor{dimmed}{B1 TELC}} \\
+\vspace{0.4em}
     {\footnotesize
     \begin{tabular}{@{}l l@{}}
     \selectfont\textcolor{dimmed}{Hören} & \circles{2}{6}\\
@@ -516,17 +521,13 @@ Grade: 1.3/1.0 — Top of class
 \begin{minipage}[t]{0.45\textwidth}
   \begin{center}
   \textbf{{\fontsize{12pt}{12pt}\selectfont\textcolor{skilltitle_color}{Interests}}} \\[0.5em]
-  \begin{tabular}{@{}l l@{}}
   \fontsize{10pt}{10pt}{Graphics Design}\\
   \fontsize{10pt}{10pt}{Tennis}\\
   \fontsize{10pt}{10pt}{Movies and TV Series}\\
   \fontsize{10pt}{10pt}{Trying Different Restaurants}\\
-  \end{tabular}
 \end{center}
 \end{minipage}
 \end{center}
-
-
 
 
 \end{document}
